Bessere Ausgabe des detailierten Status eines Vorgangs

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -64,8 +64,11 @@ de:
       abuse: Missbrauch
       comment: Lob/Hinweise/Kritik
       edit: Vorgang Bearbeiten
-      vote: Unterstützung
       hint_photo_required: "Hinweis der Verwaltung: Für diesen Vorgang wird ein neues Foto gewünscht!"
+      vote: Unterstützung
+    status:
+      currently: aktuell bei
+      since: seit
 
   votes:
     create:
