--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -22,7 +22,7 @@ de:
     in_process: In Bearbeitung
     pending: Gemeldet
     processed: Abgeschlossen
-    recieved: Offen
+    received: Offen
     rejected: Wird nicht bearbeitet
 
   # General view contents
