Blätterfunktion im Kopfbereich des Datensatzes

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -123,6 +123,7 @@ de:
         abuse: Missbrauch
         comment: Lob/Hinweise/Kritik
         edit: Vorgang bearbeiten
+        list: Zurück zur Liste
         note: Neuer interner Kommentar
         reload: Aktualisieren
         vote: Unterstützung
