Job-Status und Detail-Ansicht

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -147,6 +147,7 @@ de:
         abuse: Missbrauch
         comment: Lob/Hinweise/Kritik
         edit: Vorgang bearbeiten
+        kod: KOD-Formular
         list: Zurück zur Liste
         note: Neuer interner Kommentar
         reload: Aktualisieren
