--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -51,6 +51,8 @@ de:
   buttons:
     cancel: abbrechen
     describe: beschreiben
+    new_request: Neue Meldung
+    requests: Zu den Meldungen...
     ok: Ok
     save: speichern
     search: suchen
@@ -130,6 +132,12 @@ de:
       empty_result: Für heute liegen keine Aufträge vor.
       title: Aufträge
 
+  maps:
+    desktop:
+      adresses: Adressen
+      request: Meldung
+      watch: Beobachten
+
   notes:
     create:
       error: Fehler bei internem Kommentar
@@ -165,6 +173,9 @@ de:
       success:
         one: Neue Meldung erfolgreich abgesetzt
         other: "%{count} neue Meldungen wurden hinzugefügt."
+    desktop:
+      start_request:
+        new_request: Bitte wählen Sie eine Meldung auf der Karte, oder erstellen Sie eine neue Meldung.
     index:
       empty_result: Es liegen keine Meldungen vor.
       title: Meldungen
@@ -197,6 +208,12 @@ de:
       checked: abgehakt
       unchecked: nicht abgehakt
       not-checkable: nicht abarbeitbar
+
+  starts:
+    show:
+      news: Neuigkeiten
+      recent_requests: Neueste Meldungen
+      statistics: Statistik
 
   votes:
     create:
