--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -173,31 +173,33 @@ de:
       success:
         one: Neue Meldung erfolgreich abgesetzt
         other: "%{count} neue Meldungen wurden hinzugefügt."
-    desktop:
+    desktop: &requests 
       start_request:
         new_request: Bitte wählen Sie eine Meldung auf der Karte, oder erstellen Sie eine neue Meldung.
+      new:
+        error: Fehler bei neuer Meldung
+        hint:
+          label: Hinweis
+          text: Vor der Veröffentlichung werden eingegebene Texte sowie das Foto redaktionell geprüft.
+      show:
+        actions:
+          abuse: Missbrauch
+          comment: Lob, Hinweise oder Kritik
+          edit: Meldung bearbeiten
+          kod: KOD-Protokoll
+          list: zurück zur Liste
+          note: neuer interner Kommentar
+          reload: aktualisieren
+          vote: Unterstützung
+        hint_photo_required: "Für diese Meldung wird ein (neues) Foto gewünscht."
+        votes_html: "Bisher <span class='request-votes'>%{votes}</span> Unterstützungen"
+        votes_under_min_req_html: "Bisher <span class='request-votes under-min-req'>%{votes}</span> Unterstützungen"
+        votes_min_req: "(%{min_req} nötig)"
     index:
       empty_result: Es liegen keine Meldungen vor.
       title: Meldungen
-    new:
-      error: Fehler bei neuer Meldung
-      hint:
-        label: Hinweis
-        text: Vor der Veröffentlichung werden eingegebene Texte sowie das Foto redaktionell geprüft.
-    show:
-      actions:
-        abuse: Missbrauch
-        comment: Lob, Hinweise oder Kritik
-        edit: Meldung bearbeiten
-        kod: KOD-Protokoll
-        list: zurück zur Liste
-        note: neuer interner Kommentar
-        reload: aktualisieren
-        vote: Unterstützung
-      hint_photo_required: "Für diese Meldung wird ein (neues) Foto gewünscht."
-      votes_html: "Bisher <span class='request-votes'>%{votes}</span> Unterstützungen"
-      votes_under_min_req_html: "Bisher <span class='request-votes under-min-req'>%{votes}</span> Unterstützungen"
-      votes_min_req: "(%{min_req} nötig)"
+    mobile:
+      <<: *requests
     status:
       currently: aktuell bei
       since: seit
