Karten-Panel auf- und zuklappbar und Schaltflächen zum Wechseln der Kartenansicht implementiert

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -134,7 +134,10 @@ de:
 
   maps:
     desktop:
+      aerial_view: Luftbild
       adresses: Adressen
+      map: Karte
+      map_view: Kartenansicht
       request: Meldung
       watch: Beobachten
 
