--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -136,7 +136,7 @@ de:
     desktop:
       aerial_view: Luftbild
       adresses: Adressen
-      map: Karte
+      map_elements: Kartenelemente
       map_view: Kartenansicht
       request: Meldung
       watch: Beobachten
