--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2,7 +2,9 @@ de:
   time:
     formats:
       default: "%d. %B %Y, %H:%M Uhr"
-
+  api: API
+  impressum: Impressum
+  mobile: Mobil
   pagetitle: Klarschiff-Prüf- und Protokollclient
   pagetitle_mobile_client: Klarschiff – Portal zur Bürgerbeteiligung
   username: Benutzername
