Adressen-Dialog für die Desktop-Umgebung umgestezt

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -150,7 +150,7 @@ de:
   maps:
     desktop:
       aerial_view: Luftbild
-      adresses: Adressen
+      addresses: Adressen
       map_elements: Karte
       map_view: Kartenansicht
       request: Meldung
