Adressensuche für Mobil-Umgebung angepasst

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -165,8 +165,11 @@ de:
       title: interner Kommentar
 
   places:
-    index:
-      results: Ergebnisse
+    desktop: &places
+      index:
+        results: Ergebnisse
+    mobile:
+      <<: *places
 
   protocols:
     create:
