--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -278,9 +278,13 @@ de:
 
   starts:
     show:
+      newest: Neue Meldungen letzten Monat
       news: Neuigkeiten
+      overall: Neue Meldungen seit 28.03.2012
+      processed: Meldungen erledigt letzten Monat
       recent_requests: Neueste Meldungen
       statistics: Statistik
+      subscribe_requests_feed: Meldungen als RSS-Feed abonnieren...
 
   votes:
     desktop: &votes
