--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -5,6 +5,7 @@ de:
   api: API
   help: Hilfe
   impressum: Impressum
+  locate: Orte mich
   mobile: Mobil
   pagetitle: Klarschiff-Prüf- und Protokollclient
   pagetitle_mobile_client: Klarschiff – Portal zur Bürgerbeteiligung
