--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -233,6 +233,8 @@ de:
         one: Neue Meldung erfolgreich abgesetzt
         other: "%{count} neue Meldungen wurden hinzugefügt."
     desktop: &requests
+      create:
+        error: Fehler bei neuer Meldung
       category_select:
         describe_idea: Neue Dinge, oder gravierende Änderungen
         describe_problem: z.B. Reparatur oder Ersatz vorhandener Dinge
