--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -244,8 +244,9 @@ de:
         no_emergencies: Keine Notfälle!
         no_personal_requests: Keine pers. Anfragen (Anträge, ...)
       new:
-        step_two: Schritt 2/3
-        step_three: Schritt 3/3
+        step_two: Schritt 2/4
+        step_three: Schritt 3/4
+        step_four: Schritt 4/4
         confirmation: Bestätigung
         confirmation_text: Sie erhalten in Kürze eine E-Mail, um Ihre Meldung zu bestätigen.
         error: Fehler bei neuer Meldung
@@ -254,7 +255,7 @@ de:
           text: Vor der Veröffentlichung werden eingegebene Texte sowie das Foto redaktionell geprüft.
         what: Was?
       new_position_buttons:
-        step_one: Schritt 1/3
+        step_one: Schritt 1/4
         where: Wo?
         place_icon: Markieren Sie die betroffene Stelle möglichst genau auf der Karte.
       show:
